--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
+
+
 server.port=8082
 server.servlet.context-path=/api
-spring.datasource.url=jdbc:mysql://loalhost:3306/films?serverTimezone=America/Bogota
+spring.datasource.url=jdbc:mysql://localhost:3306/films?serverserverTimezone=America/Bogota
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=org.Mysql.jdbc.Driver
-# Ver Consultas nativas
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 logging.level.org.hibernate.SQL=debug
+
+
+
+
 
